--- a/index.css
+++ b/index.css
@@ -7,9 +7,38 @@ body{
 	font-family: arial, sans-serif;
 	font-size: 100%;
 	margin: 3em;
-	background: #666;
+	background: #fffff0;
 	color: #fff;
 }
+
+#title{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 200%;
+	color: black;
+}
+
+#timePanel{
+	height: 100%;
+	width: 25%;
+	float: left;
+}
+
+#centerPanel{
+	height: 100%;
+	width: 75%;
+	overflow: auto;
+}
+
+.time{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 800%;
+	color: rgba(200,0,0,0.5);
+	padding-top: 10%;
+}
+
+
 
 h2, p{
 	font-size: 100%;
@@ -56,13 +85,13 @@ ul li{
 	float: left;
 }
 
-ul li a.blue{
+ul li a.entity{
 	background: #E0EEEE;
 }
-ul li a.green{
+ul li a.project{
 	background: #CCFFCC;
 }
-ul li a.yellow{
+ul li a.info{
 	background: #ffc;
 }
 
