--- a/ParallaxV1/index.css
+++ b/ParallaxV1/index.css
@@ -4,20 +4,21 @@
 }
 
 body{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 100%;
 }
 
 /*****NAVIGATION********/
 nav{
 	width: 100%;
-	height: 200px;
+	height: 75px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 5;
-	background: white;
-	border-bottom: 3px solid black;
+	background-color: #202020;
+	padding: 2%;
+	/*border-bottom: 2px solid black;*/
 
 /*	-webkit-box-shadow: 0px 0px 0px 1px black;
 	-moz-box-shadow: -1px 4px 22px -1px rgba(0,0,0,0.75);
@@ -26,39 +27,43 @@ nav{
 
 	font-weight: 400;
 	font-size: 100%;
-	color: black;
 }
 
 nav ul{
 	list-style: none;
+	margin-right: 5%;
+
 }
 nav ul li{
 	display: block;
 	position: relative;
 	float: right;
 	padding: 10px;
-	margin-top: 5%;
+	margin-top: 2%;
 }
-
-h1{
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 700;
-	font-size: 200%;
-	color: black;
-	float: left;
-	margin-top: 5%;
+a{
+	text-decoration: none;
+	color:white;
 }
+a:not(#title){
 
-a, a:hover{
+	text-transform: lowercase;
+	
+	font-size: 0.75em;
+}
+a:visited, a:hover{
+	color:white;
 	text-decoration: none;
 }
 
-hr{
-	color:rgba(255,65,0,0.8);
-	background-color: rgba(255,65,0,0.8);
-	height: 5px;
-	width: 800px;
-	border: none;
+h1{
+	font-family: 'Rosario', sans-serif;
+	font-weight: 300;
+	font-size: 200%;
+	color: white;
+	float: left;
+	margin-top: 1.5%;
+	text-decoration: none;
 }
 
 #parallax{
@@ -69,6 +74,23 @@ hr{
 }
 
 .parallaxSec{
-	height: 30%;
+	/*height: 30%;*/
 	width: 100%;
+}
+
+#home{
+	height: 400px;
+}
+}#home p{
+	text-align: center;
+}
+
+footer{
+	width: 100%;
+	height: 75px;
+	background-color: #383633;
+}
+footer p{
+	color:white;
+
 }
