--- a/Mockups/ParallaxV1/index.css
+++ b/Mockups/ParallaxV1/index.css
@@ -94,7 +94,7 @@ h1{
 }
 #popupDiv{
 	bottom: 0px;
-	display: none;
+	visibility: hidden;
 
 	position: fixed;
 	width: 100%;
@@ -105,8 +105,6 @@ h1{
 	justify-content:center;
 	padding: 10px;
 
-	/*column-count:5;
-	column-width: 20em;*/
 } 
 .column{
 	width: 300px;
