--- a/Mockups/ParallaxV1/crdIndex.css
+++ b/Mockups/ParallaxV1/crdIndex.css
@@ -68,8 +68,8 @@ h1{
 	margin-top: 150px;
 
 	display: flex;
-	justify-content: center;
-	padding: 10px;
+	justify-content: left;
+	padding-left: 50px;
 	color: black;
 }
 
@@ -83,13 +83,18 @@ h1{
 	text-align: right;
 }
 #content .column{
-	text-align: right;
+	text-align: left;
+}
+
+.hovered{
+	cursor: pointer;
 }
 /***************INFO PANEL******************/
 
 #popupDiv{
 	bottom: 0px;
-	visibility: hidden;
+	/*visibility: hidden;*/
+	/*display: none;*/
 
 	position: fixed;
 	width: 100%;
@@ -108,6 +113,11 @@ h1{
 	color: rgba(255,65,0,0.8);
 }.column h4, .column h6{
 	font-size: 1em;
+} 
+#popupDiv h1{
+	font-size: 6em;
+	color: black;
+	text-align: left;
 }
 
 /***************FOOTER****************/
