--- a/Mockups/ParallaxV1/resources.css
+++ b/Mockups/ParallaxV1/resources.css
@@ -54,7 +54,7 @@ h1{
 	font-family: 'Rosario', sans-serif;
 	font-weight: 300;
 	font-size: 200%;
-	color: white;
+	color: black;
 	float: left;
 	margin-top: 1.5%;
 	text-decoration: none;
@@ -62,69 +62,28 @@ h1{
 
 /***************CONTENT*********************/
 
-.content{
+#content{
 	width: 100%;
 	height: 100%;
 	margin-top: 150px;
-
-	display: flex;
-	justify-content: left;
 	padding-left: 50px;
 	color: black;
 }
 
-.content ul{
+#content ul{
 	list-style: none;
 }
-
-.content h4{
-	font-size: 2em;
-	font-weight: bold;
-	text-align: right;
-}
-.content .column{
-	text-align: left;
+#content a{
+	color: black;
 }
 
 .hovered{
 	cursor: pointer;
 }
-.category{
-	visibility: hidden;
-}
-.alphabetical{
-	visibility: visible;
-}
-/***************INFO PANEL******************/
-
-#popupDiv{
-	bottom: 0px;
-	/*visibility: hidden;*/
-	/*display: none;*/
-
-	position: fixed;
+.section{
 	width: 100%;
-	height: 200px;
-	background-color: #DEDEDE;
-	color: black;
-	display: flex;
-	justify-content:center;
-	padding: 10px;
-	overflow: auto;
-} 
-.column{
-	width: 300px;
-	font-size: 0.75em;
-}.column .name{
-	color: rgba(255,65,0,0.8);
-}.column h4, .column h6{
-	font-size: 1em;
-} 
-#popupDiv h1{
-	font-size: 6em;
-	color: black;
-	text-align: left;
 }
+
 
 /***************FOOTER****************/
 footer{
