--- a/Mockups/V2_Parallax_SVG/index.css
+++ b/Mockups/V2_Parallax_SVG/index.css
@@ -4,10 +4,16 @@
 }
 
 body{
-	font-family: 'Open Sans', sans-serif;
+	/*font-family: 'Open Sans', sans-serif;*/
 	font-size: 100%;
-}
+	font-family: "Helvetica","HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
 
+}
+svg{
+	width: 100%;
+	padding: 100px;
+}
 /**************NAVIGATION********/
 nav{
 	width: 100%;
@@ -59,7 +65,11 @@ h1{
 	margin-top: 1.5%;
 	text-decoration: none;
 }
-
+.shadow_top{
+	-moz-box-shadow: 0px 3px 3px 0 #ccc;
+	-webkit-box-shadow: 0px 3px 3px 0 #ccc;
+	box-shadow: 0px 3px 3px 0 #ccc;
+}
 /***************CONTENT******************/
 
 #content{
@@ -77,9 +87,27 @@ h1{
 	cursor:pointer;
 }
 .clicked{
-	color:red;
+	font-color:red;
 }
 
+#intro{
+	height:200px;
+	text-align: left;
+	padding: 100px;
+	margin-top: 100px;
+	display: flex;
+	justify-content:center;
+}
+#intro h1{
+	color:black;
+	height:100%;
+	margin: 50px;
+}
+}#intro .column{
+	width: 400px;
+	margin-left: 30px;
+	padding: 30px;
+}
 
 /**************DETAIL PANEL************/
 #popupDiv{
@@ -87,12 +115,13 @@ h1{
 
 	position: fixed;
 	width: 100%;
-	height: 200px;
-	background-color: white;
-	color: black;
+	height: 170px;
+	background-color: #202020;
+	color: white;
 	display: flex;
 	justify-content:center;
-	padding: 10px;
+	padding: 40px;
+	overflow: auto;
 
 	/*column-count:5;
 	column-width: 20em;*/
@@ -100,10 +129,27 @@ h1{
 .column{
 	width: 300px;
 	font-size: 0.75em;
+	padding-right:5px;
 }.column .name{
 	color: rgba(255,65,0,0.8);
 }.column h4, .column h6{
 	font-size: 1em;
+}h2{
+	font-family: 'Helvetica';
+	font-weight: lighter;
+	text-transform: uppercase;
+}h4{
+	font-family: 'Helvetica';
+	font-weight: lighter;
+	text-transform: uppercase;
+	color: #d3d3d3;
+	padding-top: 5px;
+	padding-bottom: 15px;
+}
+.shadow_bottom{
+	-moz-box-shadow: 0px -3px 3px 0 #ccc;
+	-webkit-box-shadow: 0px -3px 3px 0 #ccc;
+	box-shadow: 0px -3px 3px 0 #ccc;
 }
 
 /***************FOOTER****************/
