--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -99,31 +99,50 @@ h1{
 
 #popupDiv{
 	bottom: 0px;
-	/*visibility: hidden;*/
-	/*display: none;*/
 
 	position: fixed;
 	width: 100%;
-	height: 200px;
-	background-color: #DEDEDE;
-	color: black;
+	height: 170px;
+	background-color: #202020;
+	color: white;
 	display: flex;
 	justify-content:center;
-	padding: 10px;
+	padding: 40px;
 	overflow: auto;
+
+	/*column-count:5;
+	column-width: 20em;*/
 } 
 .column{
 	width: 300px;
 	font-size: 0.75em;
+	padding-right:5px;
 }.column .name{
 	color: rgba(255,65,0,0.8);
 }.column h4, .column h6{
 	font-size: 1em;
-} 
-#popupDiv h1{
-	font-size: 6em;
-	color: black;
-	text-align: left;
+}h2{
+	font-family: 'Helvetica';
+	font-weight: lighter;
+	text-transform: uppercase;
+}h4{
+	font-family: 'Helvetica';
+	font-weight: lighter;
+	text-transform: uppercase;
+	color: #d3d3d3;
+	padding-top: 5px;
+	padding-bottom: 15px;
+}
+.shadow_bottom{
+	-moz-box-shadow: 0px -3px 3px 0 #ccc;
+	-webkit-box-shadow: 0px -3px 3px 0 #ccc;
+	box-shadow: 0px -3px 3px 0 #ccc;
+}
+#col4 span{
+	display: block;
+}#globe{
+	vertical-align: sub;
+	margin-top: 50px;
 }
 
 /***************FOOTER****************/
