--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -4,8 +4,10 @@
 }
 
 body{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 100%;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
 }
 
 /**************NAVIGATION********/
@@ -51,7 +53,7 @@ a:visited, a:hover{
 }
 
 h1{
-	font-family: 'Rosario', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 200%;
 	color: white;
@@ -85,17 +87,32 @@ h1{
 .content .column{
 	text-align: left;
 }
-
+.column{
+	width: 400px;
+	font-size: 0.75em;
+	margin-left: -5px;
+}
+.column_sm {
+	width: 200px;
+	font-size: 0.75em;
+}
+.column_sm a{
+	color:#878989;
+}
 .hovered{
 	cursor: pointer;
 }
-.category{
-	visibility: hidden;
+
+.alphaheader{
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-size: 24.92px;
+	color:#878989;
+	margin-bottom: 14px;
+	margin-top: 12px;
 }
-.alphabetical{
-	visibility: visible;
-}
-/***************INFO PANEL******************/
+
+/***************DETAIL PANEL******************/
 
 #popupDiv{
 	bottom: 0px;
@@ -103,40 +120,52 @@ h1{
 	position: fixed;
 	width: 100%;
 	height: 170px;
-	background-color: #202020;
-	color: white;
+	background-color: #f2f2f2;
+	color: #343434;
 	display: flex;
 	justify-content:center;
 	padding: 40px;
 	overflow: auto;
 
-	/*column-count:5;
-	column-width: 20em;*/
-} 
-.column{
-	width: 300px;
-	font-size: 0.75em;
-	padding-right:5px;
-}.column .name{
-	color: rgba(255,65,0,0.8);
+	-moz-box-shadow: 0px -2px 5px 0.5px #888;
+	-webkit-box-shadow: 0px -2px 5px 0.5px #888;
+	box-shadow: 0px -2px 5px 0.5px #888;
+	
+} #popupDiv .column{
+	margin-right: 15px;
+}
+.column .name{
+	color: #D39C2A;
+	font-family: 'Lato';
+	font-weight: 300;
 }.column h4, .column h6{
 	font-size: 1em;
 }h2{
-	font-family: 'Helvetica';
-	font-weight: lighter;
+	font-family: 'Lato';
+	font-weight: 400;
 	text-transform: uppercase;
 }h4{
-	font-family: 'Helvetica';
-	font-weight: lighter;
+	font-family: 'Lato';
+	font-weight: 400;
 	text-transform: uppercase;
-	color: #d3d3d3;
 	padding-top: 5px;
 	padding-bottom: 15px;
+	color: #888989;
+}#years{
+	color: #343434;
+	font-weight: 400;
+}#fields{
+	color: #888989;
+	font-weight: 400;
 }
 .shadow_bottom{
 	-moz-box-shadow: 0px -3px 3px 0 #ccc;
 	-webkit-box-shadow: 0px -3px 3px 0 #ccc;
 	box-shadow: 0px -3px 3px 0 #ccc;
+}#col4{
+	text-align: right;
+	padding-right: 50px;
+	margin-top: -20px;
 }
 #col4 span{
 	display: block;
@@ -144,6 +173,7 @@ h1{
 	vertical-align: sub;
 	margin-top: 50px;
 }
+
 
 /***************FOOTER****************/
 footer{
