--- a/Mockups/V2_Parallax_SVG/index.css
+++ b/Mockups/V2_Parallax_SVG/index.css
@@ -4,16 +4,14 @@
 }
 
 body{
-	/*font-family: 'Open Sans', sans-serif;*/
-	font-size: 100%;
-	font-family: "Helvetica","HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    font-weight: 300;
-
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
 }
 #wrapper{
 	width: 1154px;
-	margin-right: auto;
-	margin-left: auto;
+	margin-left: 2%;
 }
 /**************NAVIGATION********/
 nav{
@@ -32,7 +30,7 @@ nav{
 
 nav ul{
 	list-style: none;
-	margin-right: 5%;
+	margin-right: 23.5%;
 
 }
 nav ul li{
@@ -58,7 +56,7 @@ a:visited, a:hover{
 }
 
 h1{
-	font-family: 'Rosario', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 200%;
 	color: white;
@@ -66,11 +64,7 @@ h1{
 	margin-top: 1.5%;
 	text-decoration: none;
 }
-.shadow_top{
-	-moz-box-shadow: 0px 3px 3px 0 #ccc;
-	-webkit-box-shadow: 0px 3px 3px 0 #ccc;
-	box-shadow: 0px 3px 3px 0 #ccc;
-}
+
 /***************CONTENT******************/
 
 #content{
@@ -92,22 +86,29 @@ h1{
 }
 
 #intro{
-	height:200px;
+	height:300px;
 	text-align: left;
-	padding: 100px;
+	padding: 50px;
 	margin-top: 100px;
+	padding-top: 100px;
+	padding-left: 2%;
 	display: flex;
-	justify-content:center;
+	justify-content:left;
+}
+#introText{
+	display: flex;
+	justify-content: center;
 }
 #intro h1{
 	color:black;
 	height:100%;
 	margin: 50px;
-}
+	font-weight: 400;
+
 }#intro .column{
-	width: 400px;
-	margin-left: 30px;
-	padding: 30px;
+	width: 350px;
+	font-size: 0.75em;
+	padding: 15px;
 }
 
 /**************DETAIL PANEL************/
@@ -117,40 +118,50 @@ h1{
 	position: fixed;
 	width: 100%;
 	height: 170px;
-	background-color: #202020;
-	color: white;
+	background-color: white;
+	color: #303031;
 	display: flex;
 	justify-content:center;
 	padding: 40px;
 	overflow: auto;
 
-	/*column-count:5;
-	column-width: 20em;*/
+	-moz-box-shadow: 0px -2px 5px 0.5px #888;
+	-webkit-box-shadow: 0px -2px 5px 0.5px #888;
+	box-shadow: 0px -2px 5px 0.5px #888;
 } 
 .column{
-	width: 300px;
+	width: 400px;
 	font-size: 0.75em;
-	padding-right:5px;
+	margin-left: -5px;
 }.column .name{
-	color: rgba(255,65,0,0.8);
+	color: #D39C2A;
+	font-family: 'Lato';
+	font-weight: 300;
 }.column h4, .column h6{
 	font-size: 1em;
 }h2{
-	font-family: 'Helvetica';
-	font-weight: lighter;
+	font-family: 'Lato';
+	font-weight: 400;
 	text-transform: uppercase;
 }h4{
-	font-family: 'Helvetica';
-	font-weight: lighter;
+	font-family: 'Lato';
+	font-weight: 400;
 	text-transform: uppercase;
-	color: #d3d3d3;
 	padding-top: 5px;
 	padding-bottom: 15px;
+	color: #888989;
+}#years{
+	color: #343434;
+	font-weight: 400;
+}#fields{
+	color: #888989;
+	font-weight: 400;
 }
-.shadow_bottom{
-	-moz-box-shadow: 0px -3px 3px 0 #ccc;
-	-webkit-box-shadow: 0px -3px 3px 0 #ccc;
-	box-shadow: 0px -3px 3px 0 #ccc;
+
+#col4{
+	text-align: right;
+	margin-right: 70px;
+	margin-top: -20px;
 }
 #col4 span{
 	display: block;
