--- a/Mockups/V2_Parallax_SVG/resources.css
+++ b/Mockups/V2_Parallax_SVG/resources.css
@@ -2,12 +2,12 @@
 	margin:0;
 	padding: 0;
 }
-
 body{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 100%;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
 }
-
 /**************NAVIGATION********/
 nav{
 	width: 100%;
@@ -51,7 +51,7 @@ a:visited, a:hover{
 }
 
 nav h1{
-	font-family: 'Rosario', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 200%;
 	color: black;
@@ -100,6 +100,8 @@ nav h1{
 }
 #content h1{
 	display: block;	
+	font-family: 'Lato';
+	font-weight: 300;
 }
 .separator{
 	border: 0;
