--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -131,32 +131,34 @@ h1{
 	-webkit-box-shadow: 0px -2px 5px 0.5px #888;
 	box-shadow: 0px -2px 5px 0.5px #888;
 	
-} #popupDiv .column{
+}#popupDiv .column{
+	width: 400px;
+	font-size: 0.75em;
 	margin-right: 15px;
+	margin-left: 15px;
 }
 .column .name{
 	color: #D39C2A;
 	font-family: 'Lato';
 	font-weight: 300;
-}.column h4, .column h6{
-	font-size: 1em;
-}h2{
+}h2, h4{
 	font-family: 'Lato';
 	font-weight: 400;
 	text-transform: uppercase;
 }h4{
-	font-family: 'Lato';
-	font-weight: 400;
-	text-transform: uppercase;
+	font-size: 1.3em;
 	padding-top: 5px;
 	padding-bottom: 15px;
 	color: #888989;
 }#years{
 	color: #343434;
 	font-weight: 400;
+	font-size: 1.2em;
 }#fields{
 	color: #888989;
 	font-weight: 400;
+	margin-top: 15px;
+	font-size: 1.3em;
 }
 .shadow_bottom{
 	-moz-box-shadow: 0px -3px 3px 0 #ccc;
