--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -127,6 +127,7 @@ h1{
 	display: flex;
 	justify-content:center;
 	padding: 40px;
+	padding-bottom: 60px;
 	overflow: auto;
 
 	-moz-box-shadow: 0px -2px 5px 0.5px #888;
