--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -112,6 +112,7 @@ h1{
 	color:#878989;
 	margin-bottom: 14px;
 	margin-top: 12px;
+	word-spacing: 5px;
 }
 
 /***************DETAIL PANEL******************/
