--- a/Mockups/V2_Parallax_SVG/index.css
+++ b/Mockups/V2_Parallax_SVG/index.css
@@ -104,6 +104,8 @@ h1{
 	height:100%;
 	margin: 50px;
 	font-weight: 400;
+	width: 350px;
+	line-height: 150%;
 
 }#intro .column{
 	width: 350px;
@@ -123,8 +125,12 @@ h1{
 	display: flex;
 	justify-content:center;
 	padding-top: 25px;
-	padding: 40px;
-	overflow: auto;
+	padding-bottom: 40px;
+	padding-left: 2%;
+	padding-right: 40px;
+/*	overflow: -moz-scrollbars-vertical;
+	overflow-y: scroll;*/
+	/*overflow: auto;*/
 
 	-moz-box-shadow: 0px -2px 5px 0.5px #888;
 	-webkit-box-shadow: 0px -2px 5px 0.5px #888;
@@ -136,6 +142,7 @@ h1{
 	font-size: 0.75em;
 	margin-right: 15px;
 	margin-left: 15px;
+	padding-bottom: 50px;
 }.column .name{
 	color: #D39C2A;
 	font-family: 'Lato';
