--- a/Mockups/V2_Parallax_SVG/about.css
+++ b/Mockups/V2_Parallax_SVG/about.css
@@ -63,6 +63,7 @@ h1{
 }
 h6{
 	font-size: 100%;
+	color: #D39C2A;
 }
 
 /***************CONTENT*********************/
@@ -71,13 +72,13 @@ h6{
 	width: 100%;
 	height: 100%;
 	margin-top: 200px;
+}
 
+#main{
 	display: flex;
 	justify-content: left;
 	padding-left: 2%;
 	color: black;
-
-	padding-bottom: 250px;
 }
 
 .content h4{
@@ -85,7 +86,10 @@ h6{
 	font-weight: bold;
 	text-align: right;
 }
-.content .column{
+.content a{
+	color: black;
+}
+#main .column{
 	text-align: left;
 }
 .column{
@@ -114,9 +118,26 @@ h6{
 .alphaheader{
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
-	font-size: 1.5em;
+	font-size: 1.8em;
 	color:#878989;
 	margin-bottom: 14px;
 	margin-top: 12px;
 }
 
+#team{
+	padding-left: 2%;
+	padding-top: 10px;
+}
+.individual{
+	width: 800px;
+	height: 150px;
+	float: left;
+}
+.individual img{
+	float: left;
+	padding-right: 15px;
+}
+
+.italicize{
+	font-style: italic;
+}
