--- a/Mockups/V2_Parallax_SVG/index.css
+++ b/Mockups/V2_Parallax_SVG/index.css
@@ -38,7 +38,8 @@ nav ul li{
 	position: relative;
 	float: right;
 	padding: 8px;
-	margin-top: 2%;
+	margin-right: 2px;
+	margin-top: 5%;
 }
 a{
 	text-decoration: none;
@@ -59,10 +60,11 @@ h1{
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 200%;
+	width: 350px;
 	color: white;
 	float: left;
-	margin-top: 1.5%;
 	text-decoration: none;
+	line-height: 30pt;
 }
 
 /***************CONTENT******************/
@@ -88,7 +90,7 @@ h1{
 #intro{
 	height:300px;
 	text-align: left;
-	padding: 50px;
+	padding: 2%;
 	margin-top: 100px;
 	padding-top: 100px;
 	padding-left: 2%;
@@ -107,7 +109,9 @@ h1{
 	width: 350px;
 	line-height: 150%;
 
-}#intro .column{
+}
+
+#intro .column{
 	width: 350px;
 	font-size: 0.75em;
 	padding: 15px;
@@ -181,19 +185,14 @@ h1{
 
 /***************FOOTER****************/
 footer{
-	width: 100%;
-	height: 75px;
-	background-color: #383633;
-}
-/*footer{
-	bottom: 0px;
-	display: none;
-	position: fixed;
+	margin-top: 50px;
 	width: 100%;
 	height: 100px;
-	background-color: #383633;
-}*/
-footer p{
-	color:white;
-	padding: 20px;
+	background-color: #202020;
+	bottom: 0px;
+}
+
+footer img{
+	float: right;
+	padding: 10px;
 }
