--- a/Mockups/V2_Parallax_SVG/crdIndex.css
+++ b/Mockups/V2_Parallax_SVG/crdIndex.css
@@ -185,12 +185,14 @@ h2, h4{
 
 /***************FOOTER****************/
 footer{
+	margin-top: 50px;
 	width: 100%;
-	height: 75px;
-	background-color: #383633;
+	height: 100px;
+	background-color: #202020;
+	bottom: 0px;
 }
 
-footer p{
-	color:white;
-	padding: 20px;
+footer img{
+	float: right;
+	padding: 10px;
 }
