--- a/Mockups/V2_Parallax_SVG/glossary.css
+++ b/Mockups/V2_Parallax_SVG/glossary.css
@@ -99,7 +99,7 @@ h6{
 	font-size: 0.75em;
 	margin-left: -5px;
 	padding: 0.5%;
-	padding-right: 1%;
+	padding-right: 2%;
 }
 
 .hovered{
@@ -107,12 +107,26 @@ h6{
 }
 
 #heading{
-	margin-top: 150px;
-	margin-bottom: 15px;
+	margin-top: 170px;
+	margin-bottom: 20px;
 	padding-left: 2%;
 	width: 100%;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 1.5em;
 	color:#878989;
+}
+
+/***************FOOTER****************/
+footer{
+	margin-top: 50px;
+	width: 100%;
+	height: 100px;
+	background-color: #202020;
+	bottom: 0px;
+}
+
+footer img{
+	float: right;
+	padding: 10px;
 }
