--- a/Mockups/V2_Parallax_SVG/resources.css
+++ b/Mockups/V2_Parallax_SVG/resources.css
@@ -115,7 +115,9 @@ nav h1{
 	color:#878989;
 }
 .column_sm img{
+	margin-top: 5px;
 	padding: 10px;
+	float: left;
 }
 .downloadable{
 	position: relative;
@@ -175,12 +177,14 @@ h4{
 
 /***************FOOTER****************/
 footer{
+	margin-top: 50px;
 	width: 100%;
-	height: 75px;
-	background-color: #383633;
+	height: 100px;
+	background-color: #202020;
+	bottom: 0px;
 }
 
-footer p{
-	color:white;
-	padding: 20px;
+footer img{
+	float: right;
+	padding: 10px;
 }
