--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -2,6 +2,12 @@
 	margin:0;
 	padding: 0;
 }
+/*
+@font-face{
+	font-family: 'Lato';
+	src: url('fonts/Lato-Light.ttf');
+	src: url('fonts/Lato-Regular.ttf');
+}*/
 
 body{
 	font-family: 'Lato', sans-serif;
@@ -31,14 +37,16 @@ nav{
 nav ul{
 	list-style: none;
 	margin-right: 23.5%;
+	padding: 60px 0px 0px;
 
 }
 nav ul li{
 	display: inline-block;
 	position: relative;
 	float: right;
-	padding-left: 8px;
-	padding-right: 8px;
+	padding: 0px 8px 0px;
+	/*padding-left: 8px;
+	padding-right: 8px;*/
 	margin-right: 2px;
 	vertical-align: text-bottom;
 
@@ -62,6 +70,7 @@ a:visited, a:hover{
 #titleContainer{
 	width: 350px;
 	float: left;
+	padding: 20px 0px 0px;
 	/*margin-top: 2%;*/
 }
 
@@ -74,6 +83,12 @@ h1{
 	line-height: 20pt;
 }
 
+.vertical-line{
+	width: 1px;
+	background-color: white;
+	height: 20px;
+	display: inline-block;
+}
 /***************CONTENT******************/
 
 #content{
@@ -99,7 +114,7 @@ h1{
 	text-align: left;
 	padding: 2%;
 	margin-top: 100px;
-	padding-top: 100px;
+	padding-top: 115px;
 	padding-left: 2%;
 	display: flex;
 	justify-content:left;
@@ -121,13 +136,14 @@ h1{
 #intro .column{
 	width: 300px;
 	font-size: 0.75em;
-	padding: 15px;
+	padding: 0px 15px 0px;
 }
 
-#intro .columnimg{
+#intro .column .columnimg{
 	width: 400px;
-	padding-left: none;
-	margin-left: -2%;
+	padding:0px 15px 0px;
+	margin: none;
+	/*margin-left: 2%;*/
 }
 
 /**************DETAIL PANEL************/
