--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -12,7 +12,7 @@ body{
 
 /**************NAVIGATION********/
 nav{
-	/*width: 100%;*/
+	width: 100%;
 	height: 75px;
 	position: fixed;
 	top: 0;
@@ -70,7 +70,10 @@ h1{
 	margin-top: 150px;
 
 	display: flex;
+	display: -webkit-flex;
+	display: -webkit-box;
 	justify-content: left;
+	
 	padding-left: 50px;
 	color: black;
 
@@ -121,12 +124,16 @@ h1{
 	bottom: 0px;
 
 	position: fixed;
-	/*width: 100%;*/
+	width: 100%;
 	height: 170px;
 	background-color: #f2f2f2;
 	color: #343434;
+	
 	display: flex;
+	display: -webkit-flex;
+	display: -webkit-box;
 	justify-content:center;
+
 	padding: 40px;
 	padding-bottom: 60px;
 	overflow: auto;
