--- a/Mockups/V3_Integrated/resources.css
+++ b/Mockups/V3_Integrated/resources.css
@@ -8,9 +8,13 @@ body{
 	font-size: 16px;
 	line-height: 20px;
 }
+#wrapper{
+	width: 1154px;
+	margin-left: 2%;
+}
 /**************NAVIGATION********/
 nav{
-	/*width: 100%;*/
+	width: 100%;
 	height: 75px;
 	position: fixed;
 	top: 0;
@@ -104,6 +108,7 @@ nav h1{
 	width: 80%;
 	font-size: 0.75em;
 	margin-left: 15px;
+	margin-bottom: 100px;
 }
 
 .column_sm {
@@ -141,6 +146,10 @@ nav h1{
 	position: relative;
 	width: 237px;
 }
+/*.section{
+	padding: 15px;
+	margin-bottom: 20px;
+}*/
 
 .hovered{
 	cursor: pointer;
@@ -196,11 +205,12 @@ h4{
 /***************FOOTER****************/
 footer{
 	margin-top: 50px;
-	/*position: fixed;*/
-	/*width: 100%;*/
+	position: fixed;
+	/*bottom: 0;*/
+	width: 100%;
 	height: 100px;
 	background-color: #333333;
-	bottom: 0px;
+	/*bottom: 0px;*/
 }
 
 footer img{
