Fix resources page; update footers for each page

--- a/Mockups/V3_Integrated/glossary.css
+++ b/Mockups/V3_Integrated/glossary.css
@@ -128,5 +128,24 @@ footer{
 
 footer img{
 	float: right;
-	padding: 10px;
+	padding: none;
+}
+footer ul{
+	list-style-type: none;
+}#contact{
+	float: left;
+	float: left;
+	margin-top: 25px;
+	margin-left: 2%;
+	padding: 5px;
+}
+#contact a{
+	color: white;
+	font-family: 'Lato';
+	font-size: 10pt;
+}
+#dipiLinks{
+	float: right;
+	padding-right: 5px;
+	margin-top: 15px;
 }
