--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -143,7 +143,7 @@ h1{
 	box-shadow: 0px -2px 5px 0.5px #888;
 	
 }#popupDiv .column{
-	width: 400px;
+	width: 18%;
 	font-size: 0.75em;
 	margin-right: 15px;
 	margin-left: 15px;
