--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -212,7 +212,7 @@ h1{
 }
 
 #col4{
-	text-align: right;
+	text-align: left;
 	/*margin-right: 200px;*/
 	margin-top: -20px;
 }
@@ -222,6 +222,12 @@ h1{
 	vertical-align: sub;
 	margin-top: 50px;
 }
+
+/*.popupOverlay{
+	width: 100%;
+	height: 20px;
+	background-color: red;
+}*/
 
 /***************FOOTER****************/
 footer{
