--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -36,7 +36,6 @@ nav{
 
 nav ul{
 	list-style: none;
-	margin-right: 23.5%;
 	padding: 60px 0px 0px;
 
 }
@@ -191,13 +190,14 @@ h1{
 	color: #ED1C25;
 	font-family: 'Lato';
 	font-weight: 300;
+	padding-top: 15px;
 }h2, h4{
 	font-family: 'Lato';
 	font-weight: 400;
 	text-transform: uppercase;
 }h4{
 	font-size: 1.3em;
-	padding-top: 5px;
+	padding-top: 15px;
 	padding-bottom: 15px;
 	color: #888989;
 }#years{
@@ -212,9 +212,9 @@ h1{
 }
 
 #col4{
-	text-align: left;
-	/*margin-right: 200px;*/
+	text-align: right;
 	margin-top: -20px;
+	padding-right: 50px;
 }
 #col4 span{
 	display: block;
@@ -223,11 +223,7 @@ h1{
 	margin-top: 50px;
 }
 
-/*.popupOverlay{
-	width: 100%;
-	height: 20px;
-	background-color: red;
-}*/
+
 
 /***************FOOTER****************/
 footer{
@@ -246,18 +242,16 @@ footer ul{
 	list-style-type: none;
 }#contact{
 	float: left;
-	float: left;
 	margin-top: 25px;
 	margin-left: 2%;
 	padding: 5px;
 }
 #contact a{
-	color: white;
+	/*color: white;*/
 	font-family: 'Lato';
 	font-size: 10pt;
 }
 #dipiLinks{
 	float: right;
-	padding-right: 5px;
 	margin-top: 15px;
 }
