--- a/Mockups/V3_Integrated/about.css
+++ b/Mockups/V3_Integrated/about.css
@@ -42,7 +42,7 @@ a{
 	color:white;
 	font-size: 1em;
 }
-nav a:not(#title){
+.navLinks{
 	font-size: 0.75em;
 	text-transform: lowercase;
 }
@@ -64,6 +64,14 @@ h1{
 h6{
 	font-size: 100%;
 	color: black;
+}.vertical-line{
+	width: 1px;
+	background-color: white;
+	height: 20px;
+	display: inline-block;
+}#home{
+	text-transform: capitalize;
+	font-size: 0.75em;
 }
 
 /***************CONTENT*********************/
