--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -42,7 +42,7 @@ a{
 	color:white;
 	font-size: 1em;
 }
-nav a:not(#title){
+.navLinks{
 	font-size: 0.75em;
 	text-transform: lowercase;
 }
@@ -60,6 +60,15 @@ h1{
 	float: left;
 	margin-top: 1.5%;
 	text-decoration: none;
+}
+.vertical-line{
+	width: 1px;
+	background-color: white;
+	height: 20px;
+	display: inline-block;
+}#home{
+	text-transform: capitalize;
+	font-size: 0.75em;
 }
 
 /***************CONTENT*********************/
