--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -2,12 +2,6 @@
 	margin:0;
 	padding: 0;
 }
-/*
-@font-face{
-	font-family: 'Lato';
-	src: url('fonts/Lato-Light.ttf');
-	src: url('fonts/Lato-Regular.ttf');
-}*/
 
 body{
 	font-family: 'Lato', sans-serif;
@@ -16,7 +10,6 @@ body{
 	line-height: 20px;
 }
 #wrapper{
-	/*width: 1154px;*/
 	margin-left: 2%;
 }
 /**************NAVIGATION********/
@@ -44,18 +37,14 @@ nav ul li{
 	position: relative;
 	float: right;
 	padding: 0px 8px 0px;
-	/*padding-left: 8px;
-	padding-right: 8px;*/
-	/*margin-right: 2px;*/
-	vertical-align: text-bottom;
 
-	/*margin-top: 5%;*/
+	vertical-align: text-bottom;
 }
 a{
 	text-decoration: none;
 	color:white;
 }
-a:not(#title){
+.navLinks{
 
 	text-transform: lowercase;
 	font-size: 0.75em;
@@ -89,6 +78,9 @@ h1{
 	background-color: white;
 	height: 20px;
 	display: inline-block;
+}
+.parallaxLinks{
+	font-size: 0.75em;
 }
 /***************CONTENT******************/
 
