--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -66,7 +66,8 @@ h1{
 	background-color: white;
 	height: 20px;
 	display: inline-block;
-}#home{
+}
+#home{
 	text-transform: capitalize;
 	font-size: 0.75em;
 }
