--- a/Mockups/V3_Integrated/glossary.css
+++ b/Mockups/V3_Integrated/glossary.css
@@ -80,6 +80,8 @@ h6{
 	height: 100%;
 
 	display: flex;
+	display: -webkit-flex;
+	display: -webkit-box;
 	justify-content: left;
 	padding-left: 2%;
 	color: black;
