--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -122,6 +122,7 @@ h1{
 	display: -webkit-box;
 
 	justify-content: center;
+	padding: 0px 30px 0px;
 }
 #intro h1{
 	color:black;
@@ -136,7 +137,7 @@ h1{
 #intro .column{
 	width: 300px;
 	font-size: 0.75em;
-	padding: 0px 15px 0px;
+	padding: 0px 5px 0px;
 }
 
 #intro .column .columnimg{
@@ -204,9 +205,10 @@ h1{
 }
 
 #col4{
+	width: 14%;
 	text-align: right;
 	margin-top: -20px;
-	padding-right: 50px;
+	margin-right: 50px;
 }
 #col4 span{
 	display: block;
