--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -13,7 +13,7 @@ body{
 /**************NAVIGATION********/
 nav{
 	width: 100%;
-	height: 75px;
+	height: 10%;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -76,7 +76,7 @@ h1{
 
 .content{
 	height: 100%;
-	margin-top: 150px;
+	margin-top: 13%;
 
 	display: flex;
 	display: -webkit-flex;
