--- a/Mockups/V3_Integrated/resources.css
+++ b/Mockups/V3_Integrated/resources.css
@@ -12,7 +12,7 @@ body{
 /**************NAVIGATION********/
 nav{
 	width: 100%;
-	height: 75px;
+	height: 10%;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -74,7 +74,7 @@ nav h1{
 
 .content{
 	height: 100%;
-	margin-top: 150px;
+	margin-top: 13%;
 
 	display: flex;
 	display: -webkit-flex;
