--- a/Mockups/V3_Integrated/glossary.css
+++ b/Mockups/V3_Integrated/glossary.css
@@ -146,7 +146,7 @@ footer ul{
 	margin-left: 2%;
 	padding: 5px;
 }
-#contact a{
+#contact li{
 	color: white;
 	font-family: 'Lato';
 	font-size: 10pt;
