--- a/Mockups/V3_Integrated/crdIndex.css
+++ b/Mockups/V3_Integrated/crdIndex.css
@@ -83,7 +83,7 @@ h1{
 	display: -webkit-box;
 	justify-content: left;
 	
-	padding-left: 50px;
+	padding-left: 3%;
 	color: black;
 
 	padding-bottom: 250px;
@@ -134,7 +134,7 @@ h1{
 
 	position: fixed;
 	width: 100%;
-	height: 170px;
+	height: 250px;
 	background-color: #f2f2f2;
 	color: #343434;
 	
@@ -184,11 +184,8 @@ h2, h4{
 	margin-top: 15px;
 	font-size: 1.3em;
 }
-/*.shadow_bottom{
-	-moz-box-shadow: 0px -3px 3px 0 #ccc;
-	-webkit-box-shadow: 0px -3px 3px 0 #ccc;
-	box-shadow: 0px -3px 3px 0 #ccc;
-}*/
+ 
+
 #col4{
 	width: 13%;
 	text-align: right;
@@ -228,7 +225,7 @@ footer ul{
 	margin-left: 2%;
 	padding: 5px;
 }
-#contact a{
+#contact li{
 	color: white;
 	font-family: 'Lato';
 	font-size: 10pt;
