--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -153,7 +153,7 @@ h1{
 
 	position: fixed;
 	width: 100%;
-	height: 170px;
+	height: 250px;
 	background-color: white;
 	color: #303031;
 
@@ -242,8 +242,9 @@ footer ul{
 	margin-left: 2%;
 	padding: 5px;
 }
-#contact a{
-	/*color: white;*/
+
+#contact li{
+	color: white;
 	font-family: 'Lato';
 	font-size: 10pt;
 }
