Removed manual dependency in SVG
Process of Ai->SVG->code is fully automatic in script.js

--- a/Mockups/V3_Integrated/about.css
+++ b/Mockups/V3_Integrated/about.css
@@ -168,6 +168,10 @@ h6{
 .column li{
 	padding-top: 2%;
 }
+
+.column p{
+	padding-top: 4%;
+}
 /***************FOOTER****************/
 footer{
 	margin-top: 50px;
