--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -163,7 +163,7 @@ h1{
 	justify-content:left;
 
 	padding-top: 15px;
-	/*padding-bottom: 40px;*/
+	padding-bottom: 40px;
 	padding-left: 2%;
 	padding-right: 40px;
 	overflow: auto;
@@ -215,9 +215,10 @@ h1{
 }#globe{
 	vertical-align: sub;
 	margin-top: 50px;
-}.blankSpace{
-	color: white;
 }
+/*.blankSpace{
+	color: white;
+}*/
 
 
 
